<resources>
    <string name="app_name">BittersKotlin</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register_in_seconds">Don\'t have an account? Register in seconds!</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="register">Register</string>
    <string name="view">View</string>
    <string name="filter">Filter</string>
    <string name="create">Create</string>
    <string name="cocktail_name">Cocktail Name</string>
    <string name="cocktail_image">Cocktail Image</string>
    <string name="text_error">Error</string>
    <string name="text_success">Success</string>
    <string name="text_ok">OK</string>
    <string name="cocktail_type">Cocktail Type</string>
    <string name="search">Search</string>
    <string name="filter_options">Select Cocktails by Type</string>
    <string name="filter_by_cocktail_type">Cocktail Type</string>
    <string name="favorites">Favorites</string>
    <string name="popular">Popular</string>
    <string name="custom">Custom</string>
</resources>
