<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:textSize="22sp"
        android:textColor="@color/colorBlack"
        android:text="@string/filter_options"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:id="@+id/cocktail_type_group">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000"
            android:textSize="16sp"
            android:text="@string/filter_by_cocktail_type"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/filter_popular"
            android:text="@string/popular"
            android:textSize="16sp"
            android:textColor="#000"
            android:layout_marginTop="20dp"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/filter_favorites"
            android:text="@string/favorites"
            android:textSize="16sp"
            android:textColor="#000"
            android:layout_marginTop="20dp"
            />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="30dp"
        >

        <TextView
            android:id="@+id/negative_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginEnd="30dp"

            />

        <TextView
            android:id="@+id/positive_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Apply"
            android:textSize="16sp"
            android:textColor="@color/tealDark"
            />

    </LinearLayout>

</LinearLayout>