<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.view.PopularFragment">

   <com.google.android.material.card.MaterialCardView
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

      <com.google.android.material.tabs.TabLayout
          android:id="@+id/tabs"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

         <com.google.android.material.tabs.TabItem
             android:id="@+id/tab_item_popular"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="@string/popular"/>

         <com.google.android.material.tabs.TabItem
             android:id="@+id/tab_item_favorites"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="@string/favorites"/>

         <com.google.android.material.tabs.TabItem
             android:id="@+id/tab_item_custom"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="@string/custom"/>

      </com.google.android.material.tabs.TabLayout>

   </com.google.android.material.card.MaterialCardView>

   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/popular_recycler_view"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_marginTop="2dp"
       android:layout_marginStart="8dp"
       android:layout_marginEnd="8dp"/>

</LinearLayout>