<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.view.FragmentView">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/tabs_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tab_item_popular"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/popular" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tab_item_favorites"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/favorites" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tab_item_custom"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/custom" />

            </com.google.android.material.tabs.TabLayout>

        </com.google.android.material.card.MaterialCardView>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/tabs_card"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>